# zed-todo-highlighter

./: .gitignore  Cargo.toml  README.md
.github/: coverage.yml  dependabot.yml
.github/workflows/: build.yml  check.yml  ci-lsp.yml  ci.yml  test.yml  test_binaries.yml
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
language_server/: Cargo.toml
language_server/src/: lib.rs
language_server/src/adapters/: config.rs  mod.rs
language_server/src/adapters/controllers/: highlight.rs  lsp.rs  mod.rs  search.rs
language_server/src/adapters/gateways/: color_provider.rs  highlighter.rs  mod.rs  ripgrep.rs
language_server/src/adapters/presenters/: color.rs  mod.rs  position.rs
language_server/src/entities/: capabilities.rs  color.rs  coordinates.rs  error.rs  file_matches.rs  metadata.rs  mod.rs  position.rs  state.rs
language_server/src/infrastructure/: runtime.rs
language_server/src/use_cases/: highlight.rs  mod.rs  search.rs
language_server/src/use_cases/ports/: colorer.rs  conversion.rs  mod.rs  regex_manager.rs  searcher.rs
todo_highlight/: LICENSE
