[package]
name = "language_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp-server = { version = "0.23", default-features = false, features= ["runtime-tokio"] }
tokio = { version = "1", default-features = false, features = ["io-std", "rt-multi-thread", "macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false }
grep = { version = "0.2", default-features = false }
walkdir = {version = "2", default-features = false }
hex_color = { version = "3", default-features = false, features = ["serde"] }
getset = { version = "0.1", default-features = false }
typed-builder = { version = "0.23", default-features = false }
clap = { version = "4", default-features = false, features = ["std", "derive", "help"] }

[dev-dependencies]
mockall = "0.14"

[[bin]]
name = "todo-highlight-lsp"
path = "bin/server.rs"
